--- a/parallax.html
+++ b/parallax.html
@@ -145,7 +145,7 @@ return;
 <div id="p-img" class="parallax" style="background-image:url('a1.jpg');"></div>
 
 <div class="pic">
-<div id = "box" class="txtbox" ">
+<div id = "box" class="txtbox">
 
 <button id="p" class="prev"  onclick="prevpic(document.getElementById('p-img'))" >&lt;</button>
 
