--- a/parallax.html
+++ b/parallax.html
@@ -153,7 +153,7 @@ return;
 <div style=" display:flex; justify-content:space-evenly; width:85%; flex-direction: column;">
 <p id="title"  style="font-size:40px; color:black; text-align:center;  " > Modern Art</p>
 
-<p id='a1' style="font-size:25px; color:black; display:block; text-align:center;" >
+<p id='a1' style="font-size:25px; color:black; display:block; text-align:center; overflow:auto;" >
 
 Modern art includes artistic work produced during the period extending 
 roughly from the 1860s to the 1970s, and denotes the styles and philosophies 
@@ -165,21 +165,9 @@ A tendency away from the narrative, which was characteristic for the traditional
  toward abstraction is characteristic of much modern art. More recent artistic production 
  is often called contemporary art or postmodern art.
 
-Modern art begins with the heritage of painters like Vincent van Gogh,
- Paul Cézanne, Paul Gauguin, Georges Seurat and Henri de Toulouse-Lautrec
- all of whom were essential for the development of modern art. 
- At the beginning of the 20th century Henri Matisse and several other young artists 
- including the pre-cubists Georges Braque, André Derain, Raoul Dufy, Jean Metzinger 
- and Maurice de Vlaminck revolutionized the Paris art world with "wild", multi-colored,
- expressive landscapes and figure paintings that the critics called Fauvism. Matisse's 
- two versions of The Dance signified a key point in his career and in the development of 
- modern painting.[3] It reflected Matisse's incipient fascination with primitive art: 
- the intense warm color of the figures against the cool blue-green 
-background and the rhythmical succession of the dancing nudes convey the feelings of
- emotional liberation and hedonism. 
 </p>
 
-<p id='a2' style="font-size:25px; color:black; display:none; text-align:center;" >
+<p id='a2' style="font-size:25px; color:black; display:none; text-align:center; overflow:auto;" >
 Renaissance art is the painting, sculpture and decorative arts of the period of European history 
 known as the Renaissance, which emerged as a distinct style in Italy in about AD 1400, in parallel with
  developments which occurred in philosophy, literature, music, science and technology. Renaissance art, 
