--- a/parallax.html
+++ b/parallax.html
@@ -141,9 +141,9 @@ return;
 <div  class="triangle-up"></div>
 
 
-
+<div class="page-content">
 <div id="p-img" class="parallax" style="background-image:url('a1.jpg');"></div>
-
+</div>
 <div class="pic">
 <div id = "box" class="txtbox">
 
